<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Share It!</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_world_profile">Ceci est le profil</string>
    <string name="hello_world_borrow">Ceci est la liste des emprunts</string>
    <string name="hello_world_email">Ceci est la messagerie</string>
    <string name="button_add_object">Ajouter un objet</string>
    <string name="button_edit_profile">Modifier le profil</string>
    <string name="title_activity_main"></string>
    <string name="title_add_object">Ajouter un objet</string>
    <string name="type_object">Type</string>
    <string name="name_object">Nom</string>
    <string name="desc_object">Description</string>
    <string name="pic_object">Charger une photo</string>
    <string name="save_object">Enregistrer</string>
    <string name="change_date">Modifier</string>
    <string name="product">%1$s (%2$s)</string>
    <string name="dates">Du %1$s au %2$s</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_borrow">Borrow</string>
    <string name="menu_email">Email</string>
    <string name="title_activity_profile">Profil</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_borrow">Emprunts et prêts</string>
    <string name="title_activity_email">Messagerie</string>
    <string name="title_activity_add_object">Ajouter un objet</string>
    <string name="title_activity_object">Object</string>
    <string name="search">Recherche d\'objet</string>
    <string name="title_activity_borrow_request">Emprunter un objet</string>
    <string name="category_prompt">Catégorie</string>
    <string name="borrow_request">Envoyer la demande d\'emprunt</string>
    <string name="button_OK">Accepter</string>
    <string name="button_NOK">Refuser</string>
    <string name="button_returned">Rendu</string>
    <string name="button_done">Emprunté</string>
    <string name="title_activity_sign_up">Identification</string>
    <string name="status_issued">Demande en attente</string>
    <string name="status_accepted">Demande acceptée</string>
    <string name="status_borrowed">Emprunt en cours</string>
    <string name="status_refused">Demande refusée</string>
    <string name="status_completed">Emprunt terminé</string>

    <string-array name="sex">
        <item>Sexe</item>
        <item>Homme</item>
        <item>Femme</item>
    </string-array>

    <string name="title_activity_request_management">Demande d\'emprunt</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="sendMessage">Envoyer</string>
    <string name="title_activity_exchange_notation">Notation</string>
    <string name="note">Valider la note</string>
    <string name="view_all_exchanges">Montrer tous les échanges</string>
    <string name="hide_finished_exchange">Masquer les échanges terminés</string>
    <string name="title_activity_multiple_object_create">Ajout multiple</string>
    <string name="modify_object_title">Modifier l\'objet</string>

</resources>
