<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.lyon.insa.ot.sims.shareit_client.AddObjectActivity">

    <TextView
        android:id="@+id/AddObjectTitle"
        android:text="@string/title_add_object"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/TypeObject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AddObjectTitle"
        android:hint="@string/type_object"
        android:inputType="text"/>

    <EditText
        android:id="@+id/NameObject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TypeObject"
        android:hint="@string/name_object"
        android:inputType="text"/>

    <EditText
        android:id="@+id/DescObject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/NameObject"
        android:inputType="textMultiLine"
        android:hint="@string/desc_object"
        android:lines="5"/>

    <EditText
        android:id="@+id/AvailObject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/DescObject"
        android:hint="@string/avail_object" />

    <EditText
        android:id="@+id/PicObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AvailObject"
        android:hint="@string/pic_object"
        android:inputType="text" />

    <Button
        android:id="@+id/FindPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="..."
        android:layout_toRightOf="@id/PicObject"
        android:layout_below="@id/AvailObject"/>

    <Button
        android:id="@+id/SaveObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_object"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
