<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.lyon.insa.ot.sims.shareit_client.RequestManagementActivity"
    style="@style/background_style">

    <TextView
        android:id="@+id/Product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_style"
        android:textSize="40px"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/Owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Product"/>

    <TextView
        android:id="@+id/Dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Owner"/>

    <TextView
        android:id="@+id/Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Dates"/>

    <Button
        android:id="@+id/OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@drawable/custom_button"
        style="@style/button_style"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_OK"/>

    <Button
        android:id="@+id/Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@drawable/custom_button"
        style="@style/button_style"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_done"/>

    <Button
        android:id="@+id/Returned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:background="@drawable/custom_button"
        style="@style/button_style"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_returned" />

    <Button
        android:id="@+id/NOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="@style/button_style"
        android:background="@drawable/custom_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_NOK" />

</RelativeLayout>
